# reductable-params

./: MANIFEST.IN  README.md  pyproject.toml
.github/workflows/: auto-merge.yml  release-wheels.yml  run-cibuildwheel.yml  test.yml
requirements/: dev.txt  test.txt
src/reducable_params/: abc.py
src/reductable_params/: __init__.py  _reduce.py  _reduce_c.pyi  _reduce_c.pyx  _reduce_py.py  abc.py  reduce_packer.h  utils.py
tests/: test_lint.py  test_reduce.py
